--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(170, 88, 170)); 
+  background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(170, 88, 170)); 
 }
 .navbar-brand {
   margin-left: 10px;
