--- a/index.css
+++ b/index.css
@@ -66,3 +66,95 @@ footer{
   margin-top: 20px;
   background-image: linear-gradient(to bottom, #ffffff, #e0d7f1, #c9afde, #b885c6, #aa58aa);
 }
+
+
+/* TESTIMONIALS SECTION */
+#testimonials {
+  margin: 7% 3%;
+}
+
+.testimonials_div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-bottom: 2%;
+}
+
+.testimonials_div p {
+  color: rgb(170, 88, 170);
+  font-weight: bold;
+}
+
+.quote_img {
+  width: 15%;
+  position: absolute;
+  right: 2%;
+  top: 60%;
+}
+
+.clients_div {
+  align-items: center;
+  padding: 1% 2%;
+  z-index: -1;
+}
+
+.clients_div p {
+  font-size: 13px;
+}
+
+.individual_client {
+  background-color: rgb(245, 245, 245);
+  width: 100%;
+  border-radius: 12px;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  transition: 0.3s;
+  padding: 3% 5%;
+}
+
+.individual_client:hover {
+  border: 2px solid rgb(170, 88, 170);
+  box-shadow: 0px 0px 30px rgb(20, 30, 39, 0.2);
+  transform: translateY(-7px);
+}
+
+.individual_client p {
+  padding: 1% 4%;
+  text-align: center;
+  line-height: 1.7;
+  word-wrap: break-word;
+}
+
+.individual_client i {
+  color: rgb(170, 88, 170);
+  position: absolute;
+  left: 5%;
+  top: 4%;
+}
+
+.client_info {
+  display: flex;
+  padding: 3% 8%;
+}
+
+.client_info p {
+  text-align: left !important;
+}
+
+.woman_img {
+  background-image: url("img/woman\ \(2\).png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 20%;
+  border: 2px solid rgb(255, 196, 0);
+  border-radius: 50%;
+}
+
+#testimonials_carousel, 
+.for_carousel, 
+.hidden_img, .hidden_div {
+  display: none;
+}
