--- a/about.css
+++ b/about.css
@@ -1,26 +1,206 @@
-.navbar {
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(170, 88, 170)); 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+/******media query for small device*/
+@media (max-width: 789px) {
+  .appointment-btn {
+    margin: 0 15px 0 0;
+    padding: 6px 18px;
+  }
 }
-.navbar-brand {
-  margin-left: 10px;
-  font-size: 35px;
-  color:rgb(234, 0, 255);
+
+.section {
+  padding: 60px 0;
+  overflow: hidden;
 }
-.navbar-nav {
+
+.section-bg {
+  color: white;
+}
+
+.section-title {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.section-title h2 {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
   position: relative;
- left: 370px;
+  color: rgb(235, 21, 21);
+}
 
- 
+.section-title h2::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 120px;
+  height: 1px;
+  background: #fff;
+  bottom: 1px;
+  left: calc(50% - 60px);
 }
- .nav-item a:hover:not(.active) {
 
-color:rgb(66, 29, 233);
+.section-title h2::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: #1977cc;
+  bottom: 0;
+  left: calc(50% - 20px);
 }
-.nav-item {
-  
-  margin-left: 20px;
+
+.section-title p {
+  margin-bottom: 0;
 }
-.nav-link {
+
+/***ABOUT*******/
+.about .icon-boxes h4 {
+  font-size: 14px;
+  color: #4b7dab;
+  margin-bottom: 15px;
+}
+
+.about .icon-boxes h3 {
   font-size: 20px;
-  color:rgb(255, 255, 255);
+  font-weight: 700;
+  color: #cc19a8;
+  margin-bottom: 15x;
+}
+
+.about .icon-box {
+  margin-top: 40px;
+}
+
+.about .icon-box .icon {
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 64px;
+  height: 64px;
+  border: 2px solid #ecafe0;
+  border-radius: 50px;
+  transition: 0.5s;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.about .icon-box .icon i {
+  color: #4b7dab;
+  font-size: 32px;
+}
+
+.about .icon-box:hover .icon {
+  background: #3fbbc0;
+  background-color: #3fbbc0;
+}
+
+.about .icon-box:hover .icon i {
+  color: #fff;
+}
+
+.about .icon-box .title {
+  margin-left: 85px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.about .icon-box .title a {
+  color: #ecafe0;
+  transition: 0.3s;
+}
+
+.about .icon-box .title a:hover {
+  color: #cc19a8;
+}
+
+.about .icon-box .description {
+  margin-top: 85px;
+  line-height: 24px;
+  font-size: 14px;
+}
+
+.about .video-box {
+  background: url("./images/docstalking.avif") center center no-repeat;
+  background-size: cover;
+  min-height: 500px;
+  margin-left: 300px;
+}
+
+.about .play-btn {
+  width: 94px;
+  height: 94px;
+  background: radial-gradient(#1977cc 50%, rgba(25, 119, 204, 0.4)52%);
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  left: calc(50% - 47px);
+  top: calc(50% - 47px);
+  overflow: hidden;
+}
+
+.about .play-btn::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-left: 15px solid #fff;
+  z-index: 100;
+  transition: all 400ms cubic-bezier(0.55 0.055, 0.675, 0.19)
+}
+
+.about .play-btn::before {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  opacity: 1;
+  border-radius: 50%;
+  border: 5px solid rgba(25, 119, 204, 0.7);
+  top: 15%;
+  left: -15%;
+  background: rgba(198, 16, 0, 0);
+}
+
+.about .play-btn:hover::after {
+  border-right: 15px solid #1977cc;
+  transform: scale(20);
+}
+
+.about .play-btn:hover ::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border: none;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #fff;
+  z-index: 200;
+  -webkit-animation: none;
+  animation: none;
+  border-radius: 0;
+}
+
+@-webkit-keyframes pulsate-btn {
+  0% {
+    transform: scale(0.6, 0.6);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1, 1);
+    opacity: 0;
+  }
 }
