added testimonials section

--- a/index.css
+++ b/index.css
@@ -149,7 +149,7 @@ footer{
   background-position: center;
   background-size: cover;
   width: 20%;
-  border: 2px solid rgb(255, 196, 0);
+  border: 2px solid #b885c6;
   border-radius: 50%;
 }
 
