--- a/index.css
+++ b/index.css
@@ -24,6 +24,10 @@ color:rgb(66, 29, 233);
 .nav-link:hover{
   opacity: 0.7;
 }
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
 .fa {
   padding: 5px;
   font-size: 20px;
