--- a/index.css
+++ b/index.css
@@ -12,12 +12,6 @@
   margin-left: auto;
 }
 
-ul {
-  display: flex;
-  gap: 3rem;
-  align-items: center;
-}
-
 .nav-item a:hover:not(.active) {
 
   color: rgb(66, 29, 233);
@@ -36,7 +30,33 @@ ul {
 .nav-link:hover {
   opacity: 0.7;
 }
-
+.hero {
+   background-image: url(images/happy-smiling-mother-playing-with-newborn-child-comfy-light-bedroom-front-window-moments-motherhood-happiness-with-kids-family-concept.jpg);
+   background-size: cover;
+   background-repeat: no-repeat;
+   height: 500px;
+  position: relative;
+  margin-left: 30px;
+  margin-top: 80px;
+  margin-bottom: 50px;
+  padding: 90px 20px;
+font-family: var(--default-font-family);
+}
+.hero h1 {
+  
+  color: red;
+}
+.hero p {
+  color: blue;
+}
+.hero a{
+  background-color: #dd4b39;
+  color: white;
+}
+.hero a:hover{
+  background-color: #39a9dd;
+  color: white;
+}
 .fa {
   padding: 5px;
   font-size: 20px;
