--- a/contact.css
+++ b/contact.css
@@ -16,18 +16,19 @@
     font-size: 12px;
     line-height: 30px;
     color: #777;
-    background: #e48adf;
+    background-image: linear-gradient(to bottom, #ffffff, #e0d7f1, #c9afde, #b885c6, #eee0ee);
+   
   }
   
   h1{
       text-align: center;
   }
-  
-  .container {
-    max-width: 400px;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
+  .contact-container{
+    margin: 200px;
+    margin-top: 120px;
+    height: 100%;
+    width: 70%;
+    background-color: white;
   }
   
   #contact input[type="text"],
@@ -40,10 +41,9 @@
   }
   
   #contact {
-    background: #F9F9F9;
+    background: #ddd5d5;
     padding: 25px;
-    margin: 150px 0;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    margin: 0;
   }
   
   #contact h3 {
@@ -60,12 +60,8 @@
     font-weight: 400;
   }
   
-  fieldset {
-    border: medium none !important;
-    margin: 0 0 10px;
-    min-width: 100%;
-    padding: 0;
-    width: 100%;
+  input, textarea {
+    border-radius: 5px;
   }
   
   #contact input[type="text"],
@@ -88,7 +84,7 @@
     -webkit-transition: border-color 0.3s ease-in-out;
     -moz-transition: border-color 0.3s ease-in-out;
     transition: border-color 0.3s ease-in-out;
-    border: 1px solid #aaa;
+    border: 1px solid rgb(124, 14, 14);
   }
   
   #contact textarea {
@@ -99,8 +95,12 @@
   
   #contact button[type="submit"] {
     cursor: pointer;
-    width: 100%;
-    border: none;
+    position: relative;
+    left: 150px;
+    text-align: center;
+    width: 30%;
+    border: 1px;
+    border-radius: 20px 50px 30px 100px;
     background: #f86af1;
     color: #FFF;
     margin: 0 0 5px;
