added actual images

--- a/index.css
+++ b/index.css
@@ -167,13 +167,18 @@ footer {
 }
 
 /* TESTIMONIALS SECTION */
+.testimonials_row {
+  margin-bottom: 8%;
+  width: 100%;
+  padding: 0 2%;
+}
 .testimonials_div {
   margin-bottom: 0;
 }
 .quote_img {
   width: 8%;
   position: absolute;
-  right: 35%;
+  right: 5%;
 }
 
 .testimonials_div p {
@@ -191,9 +196,9 @@ footer {
 }
 
 .testimonial-img {
-  width: 10%;
+  width: 15%;
   border-radius: 100%;
-  margin: 20px;
+  /* margin: 20px; */
   border: 2px solid #c9afde;
 }
 
@@ -205,36 +210,28 @@ footer {
   border: 2px solid rgb(170, 88, 170);
   box-shadow: 0px 0px 30px rgb(20, 30, 39, 0.2);
 }
-
 .carousel_in:hover {
   transform: translateY(-7px);
 }
-
-.carousel_btn {
-  border: 1px solid #c9afde;
-  color: #c9afde;
-  background-color: #c9afde;
-  border-radius: 50%;
-}
-
 .testimonial-text {
   padding: 4% 3%;
   text-align: center;
   line-height: 1.5;
   word-wrap: break-word;
-  width: 70%;
+  width: 85%;
   margin: 2% auto;
 }
-
 .for_carousel {
   display: block;
   margin: 5%;
   text-align: center;
 }
-
 .carousel_text i {
   color: rgb(170, 88, 170);
   position: absolute;
-  left: 15%;
+  left: 10%;
   top: 5%;
+}
+.first_carousel_text i {
+  left: 9%;
 }
