--- a/services.css
+++ b/services.css
@@ -19,7 +19,7 @@ background-color: rgb(92, 217, 221);
     border-radius: 10px;
     box-shadow: 1px 1px 10px 2px rgb(165, 162, 162);
 }
-img {
+.doc_img {
     position: relative;
     left: 10px;
     width: 140px;
