--- a/index.css
+++ b/index.css
@@ -67,13 +67,13 @@ font-family: var(--default-font-family);
 }
 
 .animate_div {
- background-color: white; 
+ /* background-color: white;  */
  border-radius: 8px;
- background: rgba(255, 255, 255, 0.5);
- box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
- backdrop-filter: blur(2px);
- -webkit-backdrop-filter: blur(5px);
- border: 1px solid rgba(170, 88, 170, 0.3);
+ background: rgba(255, 255, 255, 0.2);
+ /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3); */
+ /* backdrop-filter: blur(2px); */
+ /* -webkit-backdrop-filter: blur(5px); */
+ /* border: 1px solid rgba(170, 88, 170, 0.3); */
 }
 #slideset1 {
   height: 10em; 
