--- a/index.css
+++ b/index.css
@@ -260,3 +260,63 @@ footer {
 .first_carousel_text i {
   left: 9%;
 }
+@media only screen and (max-width: 500px) {
+
+.nav-link {
+  font-size: 16px;
+  color: rgb(12, 12, 12) !important;
+}
+
+.nav-link:hover {
+  opacity: 0.7;
+}
+#signin {
+  background-color: rgb(187, 114, 187);
+  border: 2px solid rgb(182, 216, 226);
+  border-radius: 20px;
+  width: 100px;
+  text-align: center;
+}
+.hero {
+   height: 250px;
+   width: 350px;
+  position: relative;
+  margin-left: 10px;
+  margin-top: 70px;
+  margin-bottom: 20px;
+  padding: 30px 10px;
+}
+.hero h1 {
+  color: rgb(7, 80, 80);
+  margin-top: 10px;
+  font-size: 15px;
+  width: 300px;
+}
+.hero h2{
+  font-weight: bold;
+  font-size: 20px;
+}
+.btn-branding{
+  display: none;
+}
+.mission {
+  flex-direction: column;
+  position: relative;
+  margin: 0px 10px;
+ color: rgb(5, 4, 4);
+ padding: 10px;
+ width: 300px;
+}
+.first {
+  position: relative;
+ top: 0px;
+
+
+}
+.second {
+ margin-left: 5px;
+}
+.mission h2 {
+  font-size: 13px;
+}
+}
