--- a/contact.css
+++ b/contact.css
@@ -157,3 +157,35 @@
   :-ms-input-placeholder {
     color: #888;
   }
+@media only screen and (max-width: 500px) {
+
+.nav-link {
+  font-size: 16px;
+  color: rgb(12, 12, 12) !important;
+}
+
+.nav-link:hover {
+  opacity: 0.7;
+}
+#signin {
+  background-color: rgb(187, 114, 187);
+  border: 2px solid rgb(182, 216, 226);
+  border-radius: 20px;
+  width: 100px;
+  text-align: center;
+}
+.contact-container{
+
+    margin: 20px;
+    margin-top: 80px;
+    height: 20%;
+    width: 350px;
+    background-color: white;
+  }
+  
+  img {
+    width: 200px;
+    display: none;
+  }
+  
+}
