--- a/services.css
+++ b/services.css
@@ -53,3 +53,56 @@ button:hover {
     background-color: rgb(165, 89, 89);
     color: white;
 }
+@media only screen and (max-width: 500px) {
+  .doctors {
+    margin: 0px;
+    background-color: white;
+    margin-top: 150px;
+    width: 400px;
+    color: rgb(124, 11, 115);
+}
+.doc {
+   
+    margin-bottom: 10px;
+
+}
+.doc:hover {
+    transition: 100ms ease-in-out;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px 2px rgb(165, 162, 162);
+}
+.doc_img {
+    position: relative;
+    left: 0px;
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+}
+.col-sm-4 {
+    margin: 10px 0px;
+}
+.third {
+    position: relative;
+    top: -160px;
+    left: 170px;
+}
+.second {
+  position: relative;
+    top: 0px;
+    left: 10px;  
+}
+button {
+    margin-bottom: 15px;
+    border: 1px solid white;
+    border-radius: 15px 10px 20px 10px;
+    background-color: rgb(21, 173, 173);
+    width: 100px;
+    color: white;
+    height: 50px;
+    text-transform: capitalize;
+}
+button:hover {
+    background-color: rgb(165, 89, 89);
+    color: white;
+}  
+}
